# AndroidLeakTracer

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Log.h  leaktracer_jni.cpp
app/src/main/java/com/wsy/androidleaktracer/: MainActivity.java  NativeMemoryLeakDetector.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
leak-tracer-helpers/: leak-analyze-addr2line  leakLog.txt
